Add Apache email aroy@apache.org

--- a/content/index/contact/contact.mdx
+++ b/content/index/contact/contact.mdx
@@ -8,3 +8,5 @@ profileImage: "../../favicon.png"
 import Underlining from "../../../src/styles/underlining"
 
 Feel free to drop in a text, I love to chat!
+
+You can also reach me at [aroy@apache.org](mailto:aroy@apache.org) for Apache-related matters.
