Simplify Apache email text

--- a/content/index/contact/contact.mdx
+++ b/content/index/contact/contact.mdx
@@ -9,4 +9,4 @@ import Underlining from "../../../src/styles/underlining"
 
 Feel free to drop in a text, I love to chat!
 
-You can also reach me at [aroy@apache.org](mailto:aroy@apache.org) for Apache-related matters.
+You can also reach me at [aroy@apache.org](mailto:aroy@apache.org).
