Display Apache email below main email

--- a/content/index/contact/contact.mdx
+++ b/content/index/contact/contact.mdx
@@ -2,11 +2,10 @@
 title: "Get In Touch!"
 name: "Arindaam Roy"
 email: "royarindaam@gmail.com"
+email2: "aroy@apache.org"
 profileImage: "../../favicon.png"
 ---
 
 import Underlining from "../../../src/styles/underlining"
 
 Feel free to drop in a text, I love to chat!
-
-You can also reach me at [aroy@apache.org](mailto:aroy@apache.org).
